wow banyak revisi cik

--- a/Tugas_Akhir_Latex_Source/halaman-depan/abstrak.tex
+++ b/Tugas_Akhir_Latex_Source/halaman-depan/abstrak.tex
@@ -3,7 +3,7 @@
 %   Abstrak
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
+\pagebreak
 \begin{center}
     \addcontentsline{toc}{chapter}{ABSTRAK}
     \pagestyle{fancy}
