--- a/Tugas_Akhir_Latex_Source/main.tex
+++ b/Tugas_Akhir_Latex_Source/main.tex
@@ -104,7 +104,7 @@
     \appendix
     \addtocontents{toc}{\vskip10pt}
     \renewcommand{\chaptername}{LAMPIRAN}
-    %\input{./halaman-belakang/lampiran/lampiranA}
+    \input{./halaman-belakang/lampiran/lampiranA}
     %\input{./halaman-belakang/lampiran/lampiranB}
     }
 %---------------------------------------------------------------------
