--- a/Tugas_Akhir_Latex_Source/pengaturan.tex
+++ b/Tugas_Akhir_Latex_Source/pengaturan.tex
@@ -11,7 +11,8 @@
 \usepackage{graphicx}
 \graphicspath{{gambar_hasil/}}
 \usepackage{enumitem}
-\usepackage{amsmath,amssymb,amsfonts,charter,color}\usepackage[hidelinks]{hyperref}
+\usepackage{amsmath,amssymb,amsfonts,charter,color}
+\usepackage[hidelinks]{hyperref}
 \usepackage[utf8]{inputenc}
 \usepackage{lipsum} % hanya untuk membuat teks dummy
 \usepackage{wrapfig}
